--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     image: trip_planner
     ports:
       - "8080:8080"
+    networks:
+      - trip_network 
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=database;Port=5433;Database=trip_planner_db;Username=postgres;Password=Bakir123420
@@ -17,6 +19,7 @@ services:
   database:
     image: postgres:latest
     restart: always
+    container_name: database
     environment:
       - POSTGRES_USER=postgres
       - PGUSER=postgres
@@ -24,8 +27,13 @@ services:
       - POSTGRES_DB=trip_planner_db
     ports:
       - "5433:5432"
+    networks:
+      - trip_network
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+networks:
+    trip_network:
+        driver: bridge    
 volumes:
   postgres_data:
